Implementing dashboard, spinner, small fixes

--- a/src/app/components/auth/login/login.component.html
+++ b/src/app/components/auth/login/login.component.html
@@ -1,4 +1,5 @@
 <div class="container">
+  <app-spinner *ngIf="loading"></app-spinner>
   <mat-card>
     <h2>Login to your account</h2>
     <form
@@ -44,6 +45,7 @@
           color="primary"
           type="submit"
           [disabled]="loginFormGroup.invalid"
+          routerLink="/dashboard"
         >
           Login
         </button>
