--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,3 +12,7 @@ body {
 .mat-card:not([class*="mat-elevation-z"]) {
   box-shadow: -1px 2px 10px -1px rgb(0 0 0);
 }
+
+button{
+  transition: .3s ease all !important;
+}
